k8s/fund-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fund-service
  labels:
    app: fund-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fund-service
  template:
    metadata:
      labels:
        app: fund-service
    spec:
      containers:
        - name: fund-service
          image: fund-service:latest
          ports:
            - containerPort: 8092
