k8s/trade-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-service
  labels:
    app: trade-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trade-service
  template:
    metadata:
      labels:
        app: trade-service
    spec:
      containers:
        - name: trade-service
          image: trade-service:latest
          ports:
            - containerPort: 8090
