k8s/auth-service.yaml
# Deployment for Auth Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: sakina03/auth-service:latest
          ports:
            - containerPort: 8091
---
# Service for Auth Service
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
      nodePort: 30085
  type: LoadBalancer
