k8s/fund-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fund-service
spec:
  selector:
    app: fund-service
  ports:
    - protocol: TCP
      port: 8092
      targetPort: 8092
  type: ClusterIP
