k8s/risk-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: risk-service
spec:
  selector:
    app: risk-service
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: ClusterIP
