k8s/settlement-service.yaml
# Deployment for Settlement Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: settlement-service
  labels:
    app: settlement-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: settlement-service
  template:
    metadata:
      labels:
        app: settlement-service
    spec:
      containers:
        - name: settlement-service
          image: sakina03/settlement-service:latest
          ports:
            - containerPort: 8088
---
# Service for Settlement Service
apiVersion: v1
kind: Service
metadata:
  name: settlement-service
spec:
  selector:
    app: settlement-service
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
  type: ClusterIP
