k8s/trade-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trade-frontend
spec:
  selector:
    app: trade-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
