k8s/trade-frontend.yaml
# Deployment for Trade Frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-frontend
  labels:
    app: trade-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trade-frontend
  template:
    metadata:
      labels:
        app: trade-frontend
    spec:
      containers:
        - name: trade-frontend
          image: sakina03/trade-frontend:latest
          ports:
            - containerPort: 80
---
# Service for Trade Frontend
apiVersion: v1
kind: Service
metadata:
  name: trade-frontend
spec:
  selector:
    app: trade-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: LoadBalancer
