k8s/trade-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trade-service
spec:
  selector:
    app: trade-service
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
