k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
    - host: auth.example.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8091
    - host: fund.example.com
      http:
        paths:
          - path: /fund
            pathType: Prefix
            backend:
              service:
                name: fund-service
                port:
                  number: 8092
    - host: trade.example.com
      http:
        paths:
          - path: /trades
            pathType: Prefix
            backend:
              service:
                name: trade-service
                port:
                  number: 8090
    - host: frontend.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trade-frontend
                port:
                  number: 80
    - host: settlement.example.com
      http:
        paths:
          - path: /settlement
            pathType: Prefix
            backend:
              service:
                name: settlement-service
                port:
                  number: 8088
